Add comments to constructors and methods in User and Guard classes New cccc report

--- a/src/.cccc/Attendance.html
+++ b/src/.cccc/Attendance.html
@@ -51,7 +51,7 @@ Detailed report on module Attendance
 <TD WIDTH=50%>
 AttendanceEntry [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:         4">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:4</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:         4">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:4</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
