--- a/src/.cccc/DataManager.html
+++ b/src/.cccc/DataManager.html
@@ -12,11 +12,11 @@ Detailed report on module DataManager
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    21</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    63</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 9.571</EM></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 3.190</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.238</TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.413</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    11</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -44,69 +44,69 @@ Detailed report on module DataManager
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>DataManager( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:        11">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:11</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        11">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:11</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getCurrentEmployee( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       109">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:109</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       126">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:126</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getEmployee( &nbsp;string&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       153">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:153</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       177">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:177</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>readAttendanceRecord( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       129">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:129</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       150">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:150</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>readLeaveApplication( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       178">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:178</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       207">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:207</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    47</EM></TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT> 4.700</TD><TD ALIGN=RIGHT> 0.700</TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    47</EM></TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT> 2.474</TD><TD ALIGN=RIGHT> 0.368</TD></TR>
 <TR>
 <TD>setEmployee( &nbsp;shared_ptr&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       102">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:102</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       118">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:118</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>updateEmployees( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:        70">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:70</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        79">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:79</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    24</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>24.000</EM></TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    24</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT> 3.000</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>updateLeaveApplication( &nbsp;shared_ptr&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       236">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:236</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       274">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:274</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>writeAttendanceRecord( &nbsp;AttendanceEntry&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       114">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:114</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       132">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:132</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>writeEmployee( &nbsp;Employee&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:        18">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:18</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        19">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:19</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    38</EM></TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT> 4.750</TD><TD ALIGN=RIGHT> 0.625</TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    38</EM></TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT> 2.923</TD><TD ALIGN=RIGHT> 0.385</TD></TR>
 <TR>
 <TD>writeLeaveApplication( &nbsp;shared_ptr&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       162">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:162</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       187">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:187</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -119,26 +119,26 @@ definition &nbsp;
 <TD WIDTH=50%>
 AttendanceEntry [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       114">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:114</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       132">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:132</A></CODE><BR>
 <BR>
 <BR>
 Employee [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:        18">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:18</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        19">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:19</A></CODE><BR>
 <BR>
 <BR>
 shared_ptr [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       102">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:102</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       118">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:118</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       162">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:162</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       187">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:187</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       236">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:236</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       274">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:274</A></CODE><BR>
 <BR>
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       153">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:153</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       177">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:177</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
