--- a/src/.cccc/Guard.html
+++ b/src/.cccc/Guard.html
@@ -12,11 +12,11 @@ Detailed report on module Guard
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    17</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>11.250</EM></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 4.091</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 4.250</TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.545</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>     5</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -44,33 +44,33 @@ Detailed report on module Guard
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>Guard( &nbsp;...&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:         3">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:3</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:         3">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:3</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>Guard( &nbsp;Employee&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:         7">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:7</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:         8">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:8</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>Guard( &nbsp;json&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:        10">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:10</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:        12">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:12</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>markAttendance( &nbsp;shared_ptr, &nbsp;AttendanceEntry&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:        18">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:18</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:        22">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:22</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    32</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    17</EM></TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 8.000</EM></TD><TD ALIGN=RIGHT> 4.250</TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    32</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    17</EM></TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT> 4.571</TD><TD ALIGN=RIGHT> 2.429</TD></TR>
 <TR>
 <TD>~Guard( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:        14">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:14</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:        17">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:17</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -83,22 +83,22 @@ definition &nbsp;
 <TD WIDTH=50%>
 AttendanceEntry [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:        18">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:18</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:        22">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:22</A></CODE><BR>
 <BR>
 <BR>
 Employee [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:         7">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:7</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:         8">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:8</A></CODE><BR>
 <BR>
 <BR>
 json [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:        10">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:10</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:        12">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:12</A></CODE><BR>
 <BR>
 <BR>
 shared_ptr [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:        18">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:18</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:        22">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:22</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
