--- a/src/.cccc/UnpaidLeaveApplication.html
+++ b/src/.cccc/UnpaidLeaveApplication.html
@@ -12,11 +12,11 @@ Detailed report on module UnpaidLeaveApplication
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>********</TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 5.375</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.375</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>     6</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -44,39 +44,39 @@ Detailed report on module UnpaidLeaveApplication
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>UnpaidLeaveApplication( &nbsp;json&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       239">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:239</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       272">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:272</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>UnpaidLeaveApplication( &nbsp;shared_ptr, &nbsp;time_t, &nbsp;time_t, &nbsp;string, &nbsp;time_t, &nbsp;time_t, &nbsp;LeaveStatus&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>approve( &nbsp;Employee&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       243">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:243</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       277">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:277</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT> 3.000</TD></TR>
 <TR>
 <TD>getTaskType( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       270">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:270</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       307">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:307</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>reject( &nbsp;Employee&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       258">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:258</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       293">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:293</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>to_json( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:        94">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:94</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       107">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:107</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    12</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -89,40 +89,40 @@ definition &nbsp;
 <TD WIDTH=50%>
 Employee [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       243">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:243</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       277">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:277</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       258">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:258</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       293">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:293</A></CODE><BR>
 <BR>
 <BR>
 LeaveStatus [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 <BR>
 <BR>
 json [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       239">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:239</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       272">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:272</A></CODE><BR>
 <BR>
 <BR>
 shared_ptr [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 <BR>
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 <BR>
 <BR>
 time_t [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
