--- a/src/.cccc/shared_ptr.html
+++ b/src/.cccc/shared_ptr.html
@@ -26,7 +26,7 @@ Detailed report on module shared_ptr
 <TR>
 <TD>Number of Children</TD><TD>NOC</TD><TD ALIGN=RIGHT>     0</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>Coupling between objects</TD><TD>CBO</TD><TD ALIGN=RIGHT>    11</TD><TD>&nbsp;</TD></TR>
+<TD>Coupling between objects</TD><TD>CBO</TD><TD ALIGN=RIGHT>    12</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Information Flow measure ( &nbsp;inclusive&nbsp;)</TD><TD>IF4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>********</TD></TR>
 <TR>
@@ -51,65 +51,70 @@ Detailed report on module shared_ptr
 <TD WIDTH=50%>
 AttendanceRecord [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:         3">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:3</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:         3">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:3</A></CODE><BR>
 <BR>
 <BR>
 CasualLeaveApplication [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       156">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:156</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       175">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:175</A></CODE><BR>
 <BR>
 <BR>
 DataManager [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       102">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:102</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       118">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:118</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       162">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:162</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       187">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:187</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       236">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:236</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       274">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:274</A></CODE><BR>
 <BR>
 <BR>
 Director [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Director.cpp:        11">C:/Users/nouma/Downloads/attendance_system/src/Director.cpp:11</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Director.cpp:        11">C:\Users\nouma\Downloads\attendance_system\src\Director.cpp:11</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Director.cpp:        16">C:/Users/nouma/Downloads/attendance_system/src/Director.cpp:16</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Director.cpp:        16">C:\Users\nouma\Downloads\attendance_system\src\Director.cpp:16</A></CODE><BR>
 <BR>
 <BR>
 EarnedLeaveApplication [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       192">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:192</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       217">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:217</A></CODE><BR>
 <BR>
 <BR>
 Employee [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Employee.cpp:        60">C:/Users/nouma/Downloads/attendance_system/src/Employee.cpp:60</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Employee.cpp:        67">C:\Users\nouma\Downloads\attendance_system\src\Employee.cpp:67</A></CODE><BR>
+<BR>
+<BR>
+EventData [CV] <BR>
+pass by value &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\ApprovalPanel.cpp:       336">C:\Users\nouma\Downloads\attendance_system\src\panels\ApprovalPanel.cpp:336</A></CODE><BR>
 <BR>
 <BR>
 Guard [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:        18">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:18</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:        22">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:22</A></CODE><BR>
 <BR>
 <BR>
 LeaveApplication [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:         3">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:3</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:         3">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:3</A></CODE><BR>
 <BR>
 <BR>
 OfficialLeaveApplication [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:        61">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:61</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:        70">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:70</A></CODE><BR>
 <BR>
 <BR>
 Superviser [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Superviser.cpp:        12">C:/Users/nouma/Downloads/attendance_system/src/Superviser.cpp:12</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Superviser.cpp:        12">C:\Users\nouma\Downloads\attendance_system\src\Superviser.cpp:12</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Superviser.cpp:        17">C:/Users/nouma/Downloads/attendance_system/src/Superviser.cpp:17</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Superviser.cpp:        17">C:\Users\nouma\Downloads\attendance_system\src\Superviser.cpp:17</A></CODE><BR>
 <BR>
 <BR>
 UnpaidLeaveApplication [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:       235">C:/Users/nouma/Downloads/attendance_system/src/LeaveApplication.cpp:235</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:       267">C:\Users\nouma\Downloads\attendance_system\src\LeaveApplication.cpp:267</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
