--- a/src/.cccc/AttendanceEntry.html
+++ b/src/.cccc/AttendanceEntry.html
@@ -12,11 +12,11 @@ Detailed report on module AttendanceEntry
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>27.000</EM></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 3.857</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 5.000</TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.714</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>     6</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -44,39 +44,39 @@ Detailed report on module AttendanceEntry
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>AttendanceEntry( &nbsp;string, &nbsp;Attendance, &nbsp;time_t&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:         4">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:4</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:         4">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:4</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:        11">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:11</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:        12">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:12</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getTime( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:        21">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:21</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:        24">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:24</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getTimestamp( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:        26">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:26</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:        30">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:30</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getType( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:        16">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:16</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:        18">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:18</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>to_json( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:        31">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:31</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:        36">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:36</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -86,17 +86,17 @@ definition &nbsp;
 <TD WIDTH=50%>
 AttendanceRecord [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:         6">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:6</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:         6">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:6</A></CODE><BR>
 <BR>
 <BR>
 DataManager [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:       114">C:/Users/nouma/Downloads/attendance_system/src/DataManager.cpp:114</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       132">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:132</A></CODE><BR>
 <BR>
 <BR>
 Guard [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:        18">C:/Users/nouma/Downloads/attendance_system/src/Guard.cpp:18</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:        22">C:\Users\nouma\Downloads\attendance_system\src\Guard.cpp:22</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
@@ -104,17 +104,17 @@ pass by value &nbsp;
 <TD WIDTH=50%>
 Attendance [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:         4">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:4</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:         4">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:4</A></CODE><BR>
 <BR>
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:         4">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:4</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:         4">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:4</A></CODE><BR>
 <BR>
 <BR>
 time_t [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:         4">C:/Users/nouma/Downloads/attendance_system/src/AttendanceEntry.cpp:4</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:         4">C:\Users\nouma\Downloads\attendance_system\src\AttendanceEntry.cpp:4</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
