--- a/src/.cccc/AttendanceRecord.html
+++ b/src/.cccc/AttendanceRecord.html
@@ -12,11 +12,11 @@ Detailed report on module AttendanceRecord
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    23</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>********</TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 5.467</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.533</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>     7</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -44,45 +44,45 @@ Detailed report on module AttendanceRecord
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>AttendanceRecord( &nbsp;shared_ptr, &nbsp;vector&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:         3">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:3</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:         3">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:3</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addAttendance( &nbsp;AttendanceEntry&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:         6">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:6</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:         6">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:6</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getEmployee( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        11">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:11</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:        12">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:12</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getHourWorkInMonth( &nbsp;time_t&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        86">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:86</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:       102">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:102</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    30</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    30</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 7.500</EM></TD><TD ALIGN=RIGHT> 2.250</TD></TR>
 <TR>
 <TD>getHourWorkInWeek( &nbsp;time_t&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        34">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:34</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:        41">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:41</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    25</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    25</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT> 6.250</TD><TD ALIGN=RIGHT> 1.750</TD></TR>
 <TR>
 <TD>getLastStatus( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        16">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:16</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:        18">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:18</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getLastTime( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        25">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:25</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:        30">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:30</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -95,24 +95,24 @@ definition &nbsp;
 <TD WIDTH=50%>
 AttendanceEntry [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:         6">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:6</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:         6">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:6</A></CODE><BR>
 <BR>
 <BR>
 shared_ptr [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:         3">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:3</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:         3">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:3</A></CODE><BR>
 <BR>
 <BR>
 time_t [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        34">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:34</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:        41">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:41</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        86">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:86</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:       102">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:102</A></CODE><BR>
 <BR>
 <BR>
 vector [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:         3">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:3</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:         3">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:3</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
