--- a/src/.cccc/anonymous.html
+++ b/src/.cccc/anonymous.html
@@ -8,17 +8,17 @@ Detailed report on module anonymous
 <TR>
 <TH BGCOLOR="AQUA" WIDTH=70%>Metric</TH><TH BGCOLOR="AQUA" WIDTH=10%>Tag</TH><TH BGCOLOR="AQUA" WIDTH=10%>Overall</TH><TH BGCOLOR="AQUA" WIDTH=10%>Per Function</TH></TR>
 <TR>
-<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>    29</TD><TD ALIGN=RIGHT>******</TD></TR>
+<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   385</TD><TD ALIGN=RIGHT>******</TD></TR>
 <TR>
-<TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+<TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>   162</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 5.800</TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 2.377</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.000</TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.037</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>     6</TD><TD>&nbsp;</TD></TR>
+<TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    14</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = visible&nbsp;)</TD><TD>WMCv</TD><TD ALIGN=RIGHT>     0</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -42,39 +42,87 @@ Detailed report on module anonymous
 <H2><A NAME="proc">Functions</A></H2>
 <TABLE BORDER WIDTH=100%><TR>
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
+<TD>BEGIN_EVENT_TABLE( &nbsp;EmployeePanel, &nbsp;wxPanel&nbsp;)<BR>
+definition &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\EmployeePanel.cpp:        10">C:\Users\nouma\Downloads\attendance_system\src\panels\EmployeePanel.cpp:10</A></CODE><BR>
+<BR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    42</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT> 3.000</TD><TD ALIGN=RIGHT>------</TD></TR>
+<TR>
 <TD>get_end_of_month( &nbsp;time_t&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        70">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:70</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:        83">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:83</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>get_start_of_month( &nbsp;time_t&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        61">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:61</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:        72">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:72</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>get_year( &nbsp;time_t&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:        81">C:/Users/nouma/Downloads/attendance_system/src/AttendanceRecord.cpp:81</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:        96">C:\Users\nouma\Downloads\attendance_system\src\AttendanceRecord.cpp:96</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>operator &lt;&lt;( &nbsp;ostream &amp;, &nbsp;const Employee &amp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/Employee.cpp:       129">C:/Users/nouma/Downloads/attendance_system/src/Employee.cpp:129</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\Employee.cpp:       146">C:\Users\nouma\Downloads\attendance_system\src\Employee.cpp:146</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>operator &lt;&lt;( &nbsp;ostream &amp;, &nbsp;const User &amp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/User.cpp:        47">C:/Users/nouma/Downloads/attendance_system/src/User.cpp:47</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\User.cpp:        55">C:\Users\nouma\Downloads\attendance_system\src\User.cpp:55</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+<TR>
+<TD>wxBEGIN_EVENT_TABLE( &nbsp;AdminPanel, &nbsp;wxPanel&nbsp;)<BR>
+definition &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\AdminPanel.cpp:         9">C:\Users\nouma\Downloads\attendance_system\src\panels\AdminPanel.cpp:9</A></CODE><BR>
+<BR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    39</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT> 2.600</TD><TD ALIGN=RIGHT>------</TD></TR>
+<TR>
+<TD>wxBEGIN_EVENT_TABLE( &nbsp;ApprovalPanel, &nbsp;wxPanel&nbsp;)<BR>
+definition &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\ApprovalPanel.cpp:        11">C:\Users\nouma\Downloads\attendance_system\src\panels\ApprovalPanel.cpp:11</A></CODE><BR>
+<BR>
+</TD><TD ALIGN=RIGHT>    30</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>    20</TD><TD ALIGN=RIGHT> 1.500</TD><TD ALIGN=RIGHT>------</TD></TR>
+<TR>
+<TD>wxBEGIN_EVENT_TABLE( &nbsp;AttendanceReportPanel, &nbsp;wxPanel&nbsp;)<BR>
+definition &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\AttendanceReportPanel.cpp:        11">C:\Users\nouma\Downloads\attendance_system\src\panels\AttendanceReportPanel.cpp:11</A></CODE><BR>
+<BR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    83</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT> 2.964</TD><TD ALIGN=RIGHT>------</TD></TR>
+<TR>
+<TD>wxBEGIN_EVENT_TABLE( &nbsp;GuardPanel, &nbsp;wxPanel&nbsp;)<BR>
+definition &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\GuardPanel.cpp:         9">C:\Users\nouma\Downloads\attendance_system\src\panels\GuardPanel.cpp:9</A></CODE><BR>
+<BR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    47</EM></TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>    18</TD><TD ALIGN=RIGHT> 2.611</TD><TD ALIGN=RIGHT>------</TD></TR>
+<TR>
+<TD>wxBEGIN_EVENT_TABLE( &nbsp;HorizontalBar, &nbsp;wxPanel&nbsp;)<BR>
+definition &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\HorizontalBar.cpp:         4">C:\Users\nouma\Downloads\attendance_system\src\panels\HorizontalBar.cpp:4</A></CODE><BR>
+<BR>
+</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+<TR>
+<TD>wxBEGIN_EVENT_TABLE( &nbsp;LeavePanel, &nbsp;wxPanel&nbsp;)<BR>
+definition &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\LeavePanel.cpp:        11">C:\Users\nouma\Downloads\attendance_system\src\panels\LeavePanel.cpp:11</A></CODE><BR>
+<BR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    66</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>    32</TD><TD ALIGN=RIGHT> 2.062</TD><TD ALIGN=RIGHT>------</TD></TR>
+<TR>
+<TD>wxBEGIN_EVENT_TABLE( &nbsp;LoginPanel, &nbsp;wxPanel&nbsp;)<BR>
+definition &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\panels\LoginPanel.cpp:         7">C:\Users\nouma\Downloads\attendance_system\src\panels\LoginPanel.cpp:7</A></CODE><BR>
+<BR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    34</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>    18</TD><TD ALIGN=RIGHT> 1.889</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>wxIMPLEMENT_APP( &nbsp;Window&nbsp;)<BR>
 declaration &nbsp;
-<CODE><A HREF="cccc_src.html#C:/Users/nouma/Downloads/attendance_system/src/main.cpp:         5">C:/Users/nouma/Downloads/attendance_system/src/main.cpp:5</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\main.cpp:         5">C:\Users\nouma\Downloads\attendance_system\src\main.cpp:5</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
